# Programming-Languages

./: hw2.ml
HW6/: algebra.dtlg  family.dtlg  hw6-template.tex
cps/: Makefile  README.txt  ast.cmi  ast.cmo  ast.ml  cps  eval.cmi  eval.cmo  eval.ml  lexer.cmi  lexer.cmo  lexer.ml  lexer.mll  main.cmi  main.cmo  main.ml  make.bat  parser.cmi  parser.cmo  parser.ml  parser.mli  parser.mly  pprint.cmi  pprint.cmo  pprint.ml  server.cmi  server.cmo  server.ml  source01.nc  source02.nc  target01.ch  target02.ch  translate.cmi  translate.cmo  translate.ml
haskell-examples/: example-01-soln.hs  example-01.hs  example-02-soln.hs  example-02.hs  example-03-soln.hs  example-03.hs  example-04-soln.hs  example-04.hs  example-05-soln.hs  example-05.hs  example-06.hs  example-07.hs  matrix1.txt  matrix2.txt  matrix3.txt
lam/: README  ast.cmi  ast.cmo  check.cmi  check.cmo  check.ml  eval.cmi  eval.cmo  eval.ml  helper.cmi  helper.cmo  lam  lexer.cmi  lexer.cmo  lexer.ml  main.cmi  main.cmo  make.bat  parser.cmi  parser.cmo  parser.ml  parser.mli  poly.cmi  poly.cmo  pprint.cmi  pprint.cmo
sexp-kit-0.1.0.0/: LICENSE  eval.hs  sexp-kit.cabal
sexp-kit-0.1.0.0/Data/: SExp.hs
sexp-kit-0.1.0.0/Data/SExp/: Data.hs  Parser.hs
sexp-kit-0.1.0.0/Util/: ParsecQQ.hs  ToQQ.hs
sexp-kit-0.1.0.0/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
sexp-kit-0.1.0.0/dist-newstyle/packagedb/ghc-9.2.5/: package.cache  sexp-kit-0.1.0.0-inplace.conf
